[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="one"

[[bin]]
name="two"

[[bin]]
name="three"

[[bin]]
name="four"

[[bin]]
name="five"

[[bin]]
name="six"
