[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.1.8", features = ["pattern"] }
itertools = { version = "0.8.2" }

[[bin]]
name="one"

[[bin]]
name="two"

[[bin]]
name="three"

[[bin]]
name="four"

[[bin]]
name="five"

[[bin]]
name="six"

[[bin]]
name="seven"

[[bin]]
name="eight"

[[bin]]
name="nine"

[[bin]]
name="ten"

[[bin]]
name="eleven"

[[bin]]
name="twelve"

[[bin]]
name="thirteen"

[[bin]]
name="fourteen"

[[bin]]
name="fifteen"

[[bin]]
name="sixteen"

[[bin]]
name="seventeen"
